# eve-smarterbombing

./: .gitignore  CHANGELOG.md  README.md  configuration.json  pyproject.toml  smarterbombing.yml
.github/: ci-cd.yml
.github/workflows/: bundle.yml  ci-cd.yml
benchmark/: damage_graph_aggregator.py  parse_combat_log_line.py  site_statistics_aggregator.py
src/smarterbombing/: __main__.py  analysis.py  app_live.py  app_offline.py  configuration.py  log_reader.py  logs.py  ui.py  ui_configuration.py  ui_live.py  ui_offline_analysis.py
src/smarterbombing/aggregrator/: damage_graph_aggregator.py
src/smarterbombing/parsing/: combat_log_parser.py
src/smarterbombing/webui/: ui_offline_analysis.py  ui_squad.py
tests/: test_configuration.py  test_damage_graph_aggregator.py  test_log_locator.py  test_parse_combat_log_line.py  test_parse_log_timestamp.py  test_site_statistics_aggregator.py  test_strip_log_formatting.py
