[tool.poetry]
name = "smarterbombing"
version = "0.1.0"
description = "A tool for optimizing smartbomb ratting in Eve Online."
authors = ["Axel Wettervik <axel.wettervik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.2"
parse = "^1.19.0"
tabulate = "^0.9.0"
gradio = "^3.33.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
